<resources>
    <string name="app_name">Calculadora</string>
    <string name="btn1"> 1 </string>
    <string name="btn2"> 2 </string>
    <string name="btn3"> 3 </string>
    <string name="btn4"> 4 </string>
    <string name="btn5"> 5 </string>
    <string name="btn6"> 6 </string>
    <string name="btn7"> 7 </string>
    <string name="btn8"> 8 </string>
    <string name="btn9"> 9 </string>
    <string name="btn0"> 0 </string>
    <string name="btn00"> 00 </string>
    <string name="punto"> . </string>

    <string name="dividir"> / </string>
    <string name="multiplicar"> * </string>
    <string name="restar"> - </string>
    <string name="sumar"> + </string>
    <string name="igual"> = </string>
    <string name="borrar">Borrar</string>

    <string name="mensajeError">Upps :"'"v </string>

</resources>