<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txtExpresion"
                    android:layout_width="match_parent"
                    android:layout_height="136dp"
                    android:gravity="center"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/txtRespuesta"
                    android:layout_width="match_parent"
                    android:layout_height="101dp"
                    android:gravity="center" />

                <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TableRow
                        android:id="@+id/fila4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/btn7"
                            android:layout_width="68dp"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/btn7"
                            android:textSize="36sp" />

                        <Button
                            android:id="@+id/btn8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/btn8"
                            android:textSize="36sp" />

                        <Button
                            android:id="@+id/btn9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/btn9"
                            android:textSize="36sp" />

                        <Button
                            android:id="@+id/btnDividir"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/dividir"
                            android:textSize="36sp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/fila3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/btn4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/btn4"
                            android:textSize="36sp" />

                        <Button
                            android:id="@+id/btn5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/btn5"
                            android:textSize="36sp" />

                        <Button
                            android:id="@+id/btn6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/btn6"
                            android:textSize="36sp" />

                        <Button
                            android:id="@+id/btnMultiplicar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/multiplicar"
                            android:textSize="36sp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/fila2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/btn1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/btn1"
                            android:textSize="36sp" />

                        <Button
                            android:id="@+id/btn2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/btn2"
                            android:textSize="36sp" />

                        <Button
                            android:id="@+id/btn3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/btn3"
                            android:textSize="36sp" />

                        <Button
                            android:id="@+id/btnRestar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/restar"
                            android:textSize="36sp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/fila1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/btn0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/btn0"
                            android:textSize="36sp" />

                        <Button
                            android:id="@+id/btn00"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/btn00"
                            android:textSize="36sp" />

                        <Button
                            android:id="@+id/btnPunto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/punto"
                            android:textSize="36sp" />

                        <Button
                            android:id="@+id/btnSumar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/sumar"
                            android:textSize="36sp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/fila0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/btnBorrar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_span="2"
                            android:padding="3dp"
                            android:text="@string/borrar"
                            android:textSize="36sp" />

                        <Button
                            android:id="@+id/btnIgual"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_span="2"
                            android:padding="3dp"
                            android:text="@string/igual"
                            android:textSize="36sp" />

                    </TableRow>

                </TableLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>